fix unused-but-set-variable warnings with gcc 4.6

https://bugzilla.gnome.org/show_bug.cgi?id=647294